# Claude_Work1

./: CLAUDE.md  plan.md
bq-analytics-agent/: .gcloudignore  .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
bq-analytics-agent/.streamlit/: secrets.toml.template
bq-analytics-agent/config/: agents_config.yaml
bq-analytics-agent/deploy/: Dockerfile  cloudbuild.yaml  cloudrun_service.yaml
bq-analytics-agent/scripts/: provision_agents.py  setup_gcp.ps1  setup_gcp.sh  upload_config_to_gcs.py
bq-analytics-agent/src/: __init__.py  agent_manager.py  config_loader.py  conversation_manager.py  metadata_loader.py  prompt_generator.py  response_handler.py  utils.py
bq-analytics-agent/tests/: test_agent_manager.py  test_config_loader.py  test_conversation_manager.py  test_prompt_generator.py
bq-analytics-agent/ui/: app.py
bq-analytics-agent/ui/components/: chart_renderer.py  chat_message.py  data_table.py  sql_display.py
bq-analytics-agent/ui/pages/: 1_🤖_Agent_Management.py  2_💬_Chat.py  3_📜_History.py
bq-analytics-agent/ui/styles/: custom.css
bq_agent_system/: Dockerfile  requirements.txt
bq_agent_system/agents/: __init__.py  provisioner.py
bq_agent_system/chat/: __init__.py  service.py
bq_agent_system/config/: __init__.py  loader.py  schema.py
bq_agent_system/prompts/: __init__.py  generator.py
support_files/: 4_business_glossary_and_KPI_Dataplex_vs_BigQuery.json  LLM_prompt_generated_from_dataplex_llm_prompt_generator.txt  Programmatic_Agent_Creation_example.txt  dataplex_llm_prompt_generator.ipynb
(+5 files in other folders)
